# Davis-Chess-AI

./: .gitignore  LICENSE  README.md  STRUCTURE  pyproject.toml
data/games/gen_1/: 9ef73883-606f-43a7-936a-09dc32743e53.pkl  ea7b8398-b53d-4bfd-80dd-1a32d6fc077e.pkl
docs/: api.md  architecture.md  training.md
scripts/: evaluate_davis.py  play_davis.py  train_davis.py
src/davis_ai/: __init__.py
src/davis_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/davis_ai/board/: __init__.py  board_state.py
src/davis_ai/config/: __init__.py  settings.py
src/davis_ai/correction/: __init__.py  reinforcement_learner.py
src/davis_ai/engine/: __init__.py  inference.py  mcts.py  model.py
src/davis_ai/training/: __init__.py  data_pipeline.py  evaluation.py  self_play.py  trainer.py
src/davis_ai/utils/: __init__.py  constants.py  exceptions.py  logger.py  move_encoder.py
tests/integration/: test_game_flow.py
tests/performance/: benchmark_mcts.py
tests/units/: test_board_state.py  test_mcts.py
